<resources>
    <string name="app_name">SuitMediaTesYusufDio</string>
    <string name="add_user">User</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="user_avatar">avatar</string>
</resources>