<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".activities.FirstActivity">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/ic_photo"
        android:contentDescription="@string/add_user"
        android:padding="24dp"
        tools:ignore="ImageContrastCheck" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="@color/white"
        android:hint="@string/name"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="#757575" />


    <EditText
        android:id="@+id/etPalindrome"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="@color/white"
        android:hint="@string/palindrome"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPalindrome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/check"
        android:background="@drawable/bg_input"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btnNext"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/next"
        android:background="@drawable/bg_input"
        android:textColor="@android:color/white" />

</RelativeLayout>
