<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white">

    <!-- Toolbar Title Centered -->
    <TextView
        android:id="@+id/tvToolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_screen"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#222222"/>

    <!-- Back Icon (optional real icon can be used here) -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <!-- Welcome Label -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvToolbarTitle"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textSize="14sp"
        android:textColor="#444444" />

    <!-- Name Dynamic -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_marginTop="4dp"
        android:text="@string/john_doe"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <!-- Selected User Label -->
    <TextView
        android:id="@+id/tvSelectedUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_user_name"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textColor="#222222" />

    <!-- Choose User Button -->
    <Button
        android:id="@+id/btnChooseUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_user"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/dark_blue"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_input" />

</RelativeLayout>
